feat: reactive storage pipeline + Phase 1-4 validation suites
Storage pipeline architecture
-----------------------------
Replace the old universal Chunker-based path with a reactive
DataProcessingPipeline that streams Flux<DataBuffer> through ordered
Dedup -> Compress -> Encrypt -> EC steps and a final StorePort.

* New domain pipeline types: StorageUnitInfo, StepSpec,
  DataProcessingSpec, DataProcessingStep marker interfaces.
* New application pipeline types: StorageUnit (FileUnit / ChunkUnit /
  PartUnit / ECStripeUnit), DataProcessingPipeline, StorePort,
  StorageTrace, DataProcessingPipelinePort.
* New infrastructure steps: FixedWindowDedupStep with SHA-256
  MessageDigest fingerprinting and deduplicatedReuse marker,
  NoOpCompressionStep, NoOpEncryptionStep, NoOpErasureCodingStep.
* New FileSystemStorePort streams to disk via temp file + atomic
  rename + .sha256 sidecar, honouring ChunkUnit.deduplicatedReuse to
  skip duplicate writes.
* DataProcessingPipelineFactory + DataProcessingSpecBuilder +
  StorageEnginePipelineConfig wire the pipeline reactively, with
  ObjectProvider<ContentAddressIndex> fallback to a NoOp dedup step in
  contexts without the storage-engine backend.
* Remove obsolete Chunker, ApplicationChunkPayload, processChunk,
  DedupResult, ChunkProcessingState, and appendDedupReuseShortCircuit
  call sites from ReactiveStorageOrchestrator.
* Defensive copies (Map.copyOf / List.copyOf) on domain value objects
  to make reactive pipelines thread-safe; new
  DomainCollectionImmutabilityTest pins the invariant.

Phase 1-4 requirement features and runners
------------------------------------------
* Phase 1 upload-storage-engine.feature: REQ-UPLOAD-005/006 promoted to
  @implemented-and-validated; WebTestClient and AWS CLI runners share
  the same .feature.
* Phase 2 filesystem-reliability.feature added with atomic write,
  recovery scanner, and integrity detection scenarios; tags promoted
  to @implemented-and-validated.
* Phase 3 reactive-pipeli